--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<title>いのししさんユニットによる議事録作成サービス</title>
 	</head>
 	<body>
-	議事録作成サービス
-		<button type="button" name="name" value="value">button</button>
+	議事録作成サービス<br>
+		<button type="button" name="name">開始</button><br>
+		<button type="button" name="name">終了</button><br>
 	</body>
 </html>
