--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 	議事録作成サービス<br>
-		<textarea name="giji" rows="20" cols="100">ここに文字を起こす</textarea><br>
+		<textarea readonly name="giji" rows="20" cols="100">ここに文字を起こす</textarea><br>
 		<button type="button" name="name">開始</button>
 		<button type="button" name="name">終了</button><br>
 	</body>
