--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 		<title>いのししさんユニットによる議事録作成サービス</title>
 	</head>
 	<body>
-	議事録作成サービス<br>
+	<p>
+		議事録作成サービス
+	</p>
 		<textarea readonly name="giji" rows="20" cols="100">ここに文字を起こす</textarea><br>
 		<button type="button" name="name">開始</button>
 		<button type="button" name="name">終了</button><br>
