--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
 		<textarea readonly name="giji" rows="20" cols="100">ここに文字を起こす</textarea><br>
 		<button type="button" name="name">開始</button>
 		<button type="button" name="name">終了</button><br>
+	
+		<script type="text/javascript">
+			alert("Hello");
+		</script>
+	
 	</body>
 </html>
