--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>いのししさんユニットによる議事録作成サービス</title>
+			
+		<script language="javascript" type="text/javascript">
+				function OnButtonClick() {
+            				target = document.getElementById("output");
+					target.innerHTML = "Penguin";
+        			}
+    </script>
+		
 	</head>
 	<body>
 	<p>
 		議事録作成サービス
 	</p>
 		<textarea readonly name="giji" rows="20" cols="100">ここに文字を起こす</textarea><br>
+		<input type="button" value="Exec" onclick="OnButtonClick();"/>
 		<button type="button" name="name">開始</button>
 		<button type="button" name="name">終了</button><br>
-	
-		<script type="text/javascript">
-			alert("Hello");
-		</script>
+
 	
 	</body>
 </html>
