--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 			
 		<script language="javascript" type="text/javascript">
 				function startActin() {
-            				document.getElementById('eid_date').innerHTML = Date()
+            				document.getElementById('eid_date').innerHTML = Date();
         			}
 				function endActin() {
-            				document.getElementById('eid_date').innerHTML = Date()
+            				document.getElementById('eid_date').innerHTML = Date();
         			}
     		</script>
 
