--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 			
 		<script language="javascript" type="text/javascript">
 				function startActin() {
-            				alert('JavaScriptのアラート');
+            				alert('議事録の作成を開始します。');
         			}
 				function endActin() {
-            				alert('JavaScriptのアラート');
+            				alert('議事録の作成を終了しました。');
         			}
     		</script>
 
