CDNのJQueryを読み込むように変更

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>いのししさんユニットによる議事録作成サービス</title>
-			
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script language="javascript" type="text/javascript">
 				function startActin() {
             				alert('議事録の作成を開始します。');
@@ -23,4 +23,3 @@
 			<input type="button" value="終了" onclick="endActin();"/>	
 	</body>
 </html>
- 
