音声データをpostできるように変更

--- a/index.html
+++ b/index.html
@@ -1,111 +1,110 @@
 <!DOCTYPE html>
 <html lang="ja">
-	<head>
-		<meta charset="UTF-8">
-		<title>いのししさんユニットによる議事録作成サービス</title>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-		<script type="text/javascript">
+<head>
+	<meta charset="UTF-8">
+	<title>いのししさんユニットによる議事録作成サービス</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-			$(function(){
-				$("#startButton").click( function(){
-					alert('議事録の作成を開始します。');
-								//様々なブラウザでマイクへのアクセス権を取得する
-			navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia;
+	<script type="text/javascript">
 
-			//audioのみtrue。Web Audio APIが問題なく使えるのであれば、第二引数で指定した関数を実行する
-			navigator.getUserMedia({
-				audio: true,
-				video: false
-			}, successFunc, errorFunc);
+		$(() => {
+			$('#startButton').click(() => {
+				alert('議事録の作成を開始します。');
+				//様々なブラウザでマイクへのアクセス権を取得する
+				navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia;
 
-			function successFunc(stream) {
-				var recorder = new MediaRecorder(stream, {
-					mimeType: 'video/webm;codecs=vp9'
-				});
+				// Web Audio APIが使えなかった時
+				var errorFunc = error => {
+					alert("error");
+					console.log(error);
+				};
 
-			//音を拾い続けるための配列。chunkは塊という意味
-			var chunks = [];
+				var successFunc = stream => {
+					var recorder = new MediaRecorder(stream, { mimeType: 'video/webm;codecs=vp9' });
 
-			//集音のイベントを登録する
-			recorder.addEventListener('dataavailable', function(ele) {
-				if (ele.data.size > 0) {
-					chunks.push(ele.data);
-				}
-			});
-
-			// recorder.stopが実行された時のイベント
-				recorder.addEventListener('stop', function() {
-
-					var dl = document.querySelector("#dl");
-
-				//集音したものから音声データを作成する
-				dl.href = URL.createObjectURL(new Blob(chunks));
-				dl.download = 'sample.wav';
-			});
-
-		recorder.start();
-
-		//10秒後に集音を終了する。
-		setTimeout(function() {
-			alert("stop");
-			recorder.stop();
-		}, 10000);
-	}
-
-					var url = "https://asia-northeast1-icom-si2.cloudfunctions.net/create_minutes";
-		
-						var JSONdata = {
-							"audio_data" : "data",
-							"encoding" : "FLAC",
-							"sample_rate_hertz" :"16000",
-							"language_code" : "ja-JP" 
-						};
-				
-					$.ajax({
-						type : 'post',
-						url : url,
-						data : JSON.stringify(JSONdata),
-						contentType: 'application/JSON',
-						dataType : 'JSON',
-						scriptCharset: 'utf-8',
-						success : function(data) {
-		
-							// Success
-							alert('議事録の作成を終了しました。');
-							var i = 0;
-							var len = data.results.length;
-							var str = "";
-							//FIXME APIレスポンスより話者を取得し設定
-							while (i < len) {
-								str = $("#response").val() + "（話者A）\n" + data.results[i++].alternatives[0].transcript + '\n';
-								$("#response").val(str);
-							}
-						},
-						error : function(data) {
-		
-							// Error
-							alert("error");
-							alert(JSON.stringify(data));
+					//音を拾い続けるための配列。chunkは塊という意味
+					var chunks = [];
+					// 音声のbase64データ
+					var postData;
+					//集音のイベントを登録する
+					recorder.addEventListener('dataavailable', ele => {
+						if (ele.data.size > 0) {
+							chunks.push(ele.data);
 						}
 					});
-				})
-			})
-		// Web Audio APIが使えなかった時
-		function errorFunc(error) {
-			alert("error");
-		}
-		</script>
 
-	</head>
-	<body>
-		<p>
-			議事録作成サービス
-		</p>
-			<textarea readonly name="giji" rows="20" cols="100" id="response" ></textarea><br>
+					// recorder.stopが実行された時のイベント
+					recorder.addEventListener('stop', () => {
+						var dl = document.querySelector("#dl");
+						//集音したものから音声データを作成する
+						var reader = new FileReader();
+						reader.onloadend = () => postData = reader.result;
+						reader.readAsArrayBuffer(new Blob(chunks));
+					});
 
-			<p><button id="startButton" type="button">開始</button></p>
-			<p><button id="endButton" type="button">終了</button></p>
-			<a id="dl">ダウンロード</a>
-	</body>
+					recorder.start();
+
+					//10秒後に集音を終了する。
+					setTimeout(() => {
+						alert('stop');
+						recorder.stop();
+					}, 10000);
+				}
+
+				//audioのみtrue。Web Audio APIが問題なく使えるのであれば、第二引数で指定した関数を実行する
+				navigator.getUserMedia({ audio: true, video: false }, successFunc, errorFunc);
+
+				var url = "https://asia-northeast1-icom-si2.cloudfunctions.net/create_minutes";
+
+				var JSONdata = {
+					"audio_data": postData,
+					"encoding": "WAV",
+					"sample_rate_hertz": "16000",
+					"language_code": "ja-JP"
+				};
+
+				$.ajax({
+					type: 'post',
+					url: url,
+					data: JSON.stringify(JSONdata),
+					contentType: 'application/JSON',
+					dataType: 'JSON',
+					scriptCharset: 'utf-8',
+					success: data => {
+
+						// Success
+						alert('議事録の作成を終了しました。');
+						var i = 0;
+						var len = data.results.length;
+						var str = "";
+						//FIXME APIレスポンスより話者を取得し設定
+						while (i < len) {
+							str = `${$('#response').val()}（話者A）\n${data.results[i++].alternatives[0].transcript}\n;`
+							$('#response').val(str);
+						}
+					},
+					error: data => {
+						// Error
+						alert('error');
+						alert(JSON.stringify(data));
+					}
+				});
+			});
+		});
+	</script>
+
+</head>
+
+<body>
+	<p>
+		議事録作成サービス
+	</p>
+	<textarea readonly name="giji" rows="20" cols="100" id="response"></textarea><br>
+
+	<p><button id="startButton" type="button">開始</button></p>
+	<p><button id="endButton" type="button">終了</button></p>
+	<a id="dl">ダウンロード</a>
+</body>
+
 </html>
