--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 centered">
-          <h1>Bolt Template</h1>
-          <h2>Awesome Bootstrap Template</h2>
+          <h1>議事録作成サービス</h1>
+          <h2>端末のマイクを使用して、会話の文字おこしを行います</h2>
         </div>
         <!-- /col-lg-8 -->
       </div>
@@ -76,8 +76,8 @@
         </div>
 
         <div class="col-lg-7 centered">
-          <h3>WHAT WE CAN DO?</h3>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          <h3>なにができるの?</h3>
+          <p>会議に付き物の煩わしい議事録作成を自動で行ってくれます！！(今は10秒だけだけどね。。。)。会議の書記になってしまった際は、ぜひこっそりスマートフォンから当サービスを使用して、議事録作成の時短にお役立てください。</p>
         </div>
       </div>
     </div>
@@ -96,4 +96,3 @@
 
 </body>
 </html>
-
