--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900|Raleway:400,300,700,900" rel="stylesheet">
+  
+  <!-- Font Awesome -->
+  <link href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" rel="stylesheet" >
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -79,8 +82,33 @@
           <h3>なにができるの?</h3>
           <p>会議に付き物の煩わしい議事録作成を自動で行ってくれます！！(今は10秒だけだけどね。。。)。会議の書記になってしまった際は、ぜひこっそりスマートフォンから当サービスを使用して、議事録作成の時短にお役立てください。</p>
         </div>
+          <a href="#" class=circle_spread_btn"><i class="fas fa-home fa-fw"></i></a>
       </div>
     </div>
+  </div>
+  
+  <div id="hello">
+    <div class="container">
+      <div class="row">
+        <div>
+          <div class="container">
+            <h3>議事録</h3>
+              <div class="form-group ">
+                <textarea readonly="" id="messageId" rows="10" cols="60"></textarea>
+            <!-- <text name="messageName" id="messageId" cols="30" rows="5" class="form-control" placeholder="議事録"></text>-->
+            <div class="form-group ">
+            <button id="startButton">作成開始</button>
+            <button id="stopButton">作成終了</button>
+            <!--<a class="btn btn-primary btn-lg" id="download">ファイルダウンロード</a>-->
+          </div>
+          </div>
+        </div>
+        </div>
+        <!-- /col-lg-8 -->
+      </div>
+      <!-- /row -->
+    </div>
+    <!-- /container -->
   </div>
 
   <section id="contact">
